<?xml version="1.0"?>
<package format="2">
  <name>motor_drive</name>
  <version>1.0.0</version>
  <description>The motor_drive package</description>

  <maintainer email="willy-mdog@todo.todo">willy-mdog</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>i2cpwm_board</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
 
  <exec_depend>i2cpwm_board</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
